# Clipper

./: .gitignore  Dockerfile  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cicd.yml
Documents/: USERMANUAL.md
api/: clipper-api.bom  constants.py  exceptions.py  highlights_clipper.py  highlights_clipper_copy.py  licences.py  main.py  overlay_commentary.py  requirements.txt  test_api.py  test_main.py  upload_file.py
data/: stderr_log.txt
src/: .gitignore  commentary_gen.py  generate_highlights_reel.py  requirements.txt  scoreboard.py  speechToText.py
src/Sound_based_Clipping/: Sound_detector.py
src/VideoEditing/: VideoEditor.py
test/: __init__.py  speechToTextCutClip.txt  testSpeechToText.py  test_VideoEditor.py
web/: .env  .gitignore  clipper-react.bom  package-lock.json  package.json  tailwind.config.js
web/public/: file.html  index.html
web/src/: App.css  App.js  index.js  licences.py
web/src/components/: Footer.tsx  Header.tsx  SettingsModal.tsx  Timeline.tsx  UploadFileBox.tsx  UploadFileConfirm.tsx  UploadFileFinished.tsx  UploadFileModal.tsx  ViewHighlights.tsx  ViewHighlightsCommentary.tsx
web/src/pages/: UploadFile.tsx
